crates/vise/tests/ui/metrics/bogus_field.stderr
error[E0277]: the trait bound `u8: BuildMetric` is not satisfied
 --> tests/ui/metrics/bogus_field.rs:6:14
  |
6 |     counter: u8,
  |              ^^ the trait `BuildMetric` is not implemented for `u8`
  |
  = help: the following other types implement trait `BuildMetric`:
            Gauge<V>
            Family<S, M, L>
            Histogram<V>
            Counter<N, A>
  = help: see issue #48214
