crates/vise/tests/ui/metrics/bogus_field.rs
use vise::Metrics;

#[derive(Debug, Metrics)]
struct TestMetrics {
    /// Test counter.
    counter: u8,
}

fn main() {}
